# httk-atomistic

./: Makefile  README.md  RELEASING.md  pyproject.toml
.github/workflows/: release.yml
docs/: conf.py  index.md  structures.md
docs/_inventories/: httk-core.inv
docs/notebooks/: examples.ipynb
docs/reference/: index.md
examples/: structure_to_primitive.py
src/httk/atomistic/: __init__.py  _vector_guards.py  cell.py  cell_api.py  cell_backend.py  cell_class.py  cell_class_view.py  cell_like.py  cell_numeric_view.py  cell_params.py  cell_params_view.py  cell_primitive.py  cell_primitive_view.py  cell_view.py  elements.py  numeric_cell.py  numeric_sites.py  numeric_structure.py  sites.py  sites_api.py  sites_backend.py  sites_class.py  sites_class_view.py  sites_like.py  sites_numeric_view.py  sites_primitive.py  sites_primitive_view.py  sites_view.py  species.py  species_api.py  species_backend.py  species_class.py  species_class_view.py  species_like.py  species_primitive.py  species_primitive_view.py  species_view.py  structure.py  structure_api.py  structure_backend.py  (+9 more)
src/httk/atomistic/optimade_defs/: README.md  structures.json
src/httk/handlers/atomistic/: __init__.py
tests/: test_components.py  test_exact_geometry.py  test_numeric_layer.py  test_optimade_integration.py  test_structure.py  test_structure_entries.py  test_vasp_structures.py
