[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "httk-atomistic"
version = "0.3.0"
description = "httk₂ module for atomistic structures and their representations."
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Rickard Armiento", email = "rickard-gpg@armiento.net" }]
dependencies = [
  "httk-core>=2.0.0,<3",
]
keywords = [
  "Materials Discovery",
  "Materials Informatics",
  "Materials Science",
  "Machine Learning",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
[project.optional-dependencies]
numpy = ["httk-core[numpy]"]
dev = [
  "pytest>=8.0",
  "black",
  "ruff",
  "isort",
  "pyright",
  "mypy"
]
docs = [
  "sphinx",
  "furo",
  "myst-parser",
  "myst-nb",
  "sphinx-autodoc-typehints",
  "sphinx-copybutton",
  "sphinx-autoapi"
]
release = [
  "build>=1.2",
  "twine>=6.0",
]

[project.urls]
Homepage = "https://httk.org"
Documentation = "https://docs.httk.org/httk-atomistic/"
Repository = "https://github.com/httk/httk-atomistic"
Issues = "https://github.com/httk/httk-atomistic/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"httk.atomistic" = ["py.typed"]
"httk.handlers.atomistic" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py312"
src = ["src", "examples"]

[tool.black]
target-version = ["py312"]
line-length = 120
skip-string-normalization = true

[tool.pyright]
pythonVersion = "3.12"
include = ["src", "examples"]
extraPaths = ["src"]
venvPath = ".."
venv = ".venv"
reportMissingImports = true

[tool.mypy]
python_version = "3.12"
files = ["src", "examples"]
mypy_path = ["src"]
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["yaml", "markdown", "docutils", "docutils.*"]
ignore_missing_imports = true
